# voe-env

./: .env  docker-compose.yml
cli/: .gitignore  Cargo.toml  Makefile  README.md  build.sh  install.sh
cli/src/: main.rs
web/: .env.example  .gitignore  Dockerfile  README.md  drizzle.config.ts  package.json  vite.config.ts
web/drizzle/: 0000_high_mentor.sql  0000_unknown_shiver_man.sql  0000_young_phil_sheldon.sql  0001_chief_argent.sql  0001_tan_elektra.sql  0002_brainy_betty_ross.sql  0002_easy_vampiro.sql  0003_fair_blindfold.sql  0003_legal_baron_strucker.sql  0004_motionless_killraven.sql  0005_daffy_magik.sql
web/drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  _journal.json
web/src/: app.d.ts  hooks.server.ts
web/src/lib/: auth-client.ts  crypto.ts
web/src/lib/server/: auth.ts  env-vault.ts  shares.ts
web/src/lib/server/db/: index.ts  schema.ts
web/src/routes/: +page.svelte  layout.css
web/src/routes/api/keys/: +server.ts
web/src/routes/api/shares/: +server.ts
web/src/routes/api/shares/[id]/: +server.ts
web/src/routes/api/shares/incoming/: +server.ts
web/src/routes/api/test/: +server.ts
web/src/routes/dashboard/: +page.server.ts  +page.svelte
web/src/routes/dashboard/env/: +page.server.ts  +page.svelte  ShareDialog.svelte  columns.ts  data-table-actions.svelte  data-table-folder-button.svelte  data-table-key-cell.svelte  data-table-value-cell.svelte  data-table.svelte
web/src/routes/device/: +page.server.ts  +page.svelte
(+5 files in other folders)
