[package]
name = "voe-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ve"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.5", features = ["derive"] }
